Refactor so save is in textwindow

--- a/Project2.vcxproj.filters
+++ b/Project2.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="TextWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InvalidFileException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
