--- a/Project2.vcxproj
+++ b/Project2.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="TextWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InvalidFileException.h" />
     <ClInclude Include="TextWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
